# RayTracer

./: .gitignore  Background.cpp  Background.h  BoundedVolume.h  BoundingBox.cpp  Color.cpp  Color.h  DistantPointSource.cpp  DistantPointSource.h  DownSamplingCam.cpp  DownSamplingCam.h  Intersection.cpp  Intersection.h  Interval.cpp  LICENSE  Light.h  Material.h  OBJFile.cpp  PointSource.cpp  PointSource.h  README.md  RandomLight.cpp  RandomLight.h  Scene.cpp  SimplePlane.cpp  SimplePlane.h  SphereMap.cpp  Triangle.cpp  UVMap.h  camera.py  file.py  lights.py  material.py  renderable.py  scene.py  setup.py  utilities.py
src/: Background.h  BinaryVolumeHierarchy.cpp  BinaryVolumeHierarchy.h  BoundedVolume.cpp  BoundedVolume.h  BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  Camera.cpp  Camera.h  ImplicitSurface.cpp  ImplicitSurface.h  Intersection.h  IntersectionProperties.cpp  IntersectionProperties.h  Interval.h  Light.h  MTLLib.h  Material.cpp  Material.h  OBJFile.cpp  OBJFile.h  PinHoleCamera.cpp  PinHoleCamera.h  PointSource.h  Ray.cpp  Ray.h  RenderObject.h  Scene.cpp  Scene.h  SimplePlane.cpp  SimplePlane.h  SimpleSphere.cpp  SimpleSphere.h  SphereMap.h  SpotLight.h  Triangle.cpp  Triangle.h  UVMap.cpp  Utilities.cpp  (+4 more)
src/camera/: Camera.cpp  Camera.h
src/image/: post_process.cpp  post_process.h
src/linalg/: Matrix3D.cpp  Matrix3D.h  Transformation.cpp  Transformation.h  Vector3D.cpp
src/renderable/: BinaryVolumeHierarchy.cpp  BinaryVolumeHierarchy.h  BoundedVolume.cpp  BoundingBox.cpp  BoundingBox.h  CSG.cpp  CSG.h  ImplicitSurface.cpp  RenderObject.h  (+10 more)
(+1760 files in other folders)
